bindings/go/marketdata/marketdata_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
typedef struct ForeignBytes {
	int32_t len;
	const uint8_t *data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t data, int8_t poll_result);
typedef void (*UniffiCallbackInterfaceFree)(uint64_t handle);
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod0)(uint64_t uniffi_handle, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod1)(uint64_t uniffi_handle, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod2)(uint64_t uniffi_handle, RustBuffer message, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod3)(uint64_t uniffi_handle, RustBuffer error_message, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod4)(uint64_t uniffi_handle, uint32_t attempt, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod5)(uint64_t uniffi_handle, uint32_t attempts, void* uniffi_out_return, RustCallStatus* callStatus );
typedef struct UniffiVTableCallbackInterfaceWebSocketListener {
    UniffiCallbackInterfaceWebSocketListenerMethod0 onConnected;
    UniffiCallbackInterfaceWebSocketListenerMethod1 onDisconnected;
    UniffiCallbackInterfaceWebSocketListenerMethod2 onMessage;
    UniffiCallbackInterfaceWebSocketListenerMethod3 onError;
    UniffiCallbackInterfaceWebSocketListenerMethod4 onReconnecting;
    UniffiCallbackInterfaceWebSocketListenerMethod5 onReconnectFailed;
    UniffiCallbackInterfaceFree uniffiFree;
} UniffiVTableCallbackInterfaceWebSocketListener;
void* uniffi_marketdata_uniffi_fn_clone_futoptclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_futoptclient(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_futoptclient_intraday(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_futoptintradayclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_futoptintradayclient(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_products(void* ptr, RustBuffer typ
);
uint64_t uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_quote(void* ptr, RustBuffer symbol, int8_t after_hours
);
uint64_t uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_ticker(void* ptr, RustBuffer symbol, int8_t after_hours
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_products_sync(void* ptr, RustBuffer typ, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_quote_sync(void* ptr, RustBuffer symbol, int8_t after_hours, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_futoptintradayclient_ticker_sync(void* ptr, RustBuffer symbol, int8_t after_hours, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_restclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_restclient(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_restclient_futopt(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_restclient_stock(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_stockclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_stockclient(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_stockclient_intraday(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_stockintradayclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_stockintradayclient(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_candles_sync(void* ptr, RustBuffer symbol, RustBuffer timeframe, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_candles(void* ptr, RustBuffer symbol, RustBuffer timeframe
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_quote(void* ptr, RustBuffer symbol
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_ticker(void* ptr, RustBuffer symbol
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_trades(void* ptr, RustBuffer symbol
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_volumes(void* ptr, RustBuffer symbol
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_quote_sync(void* ptr, RustBuffer symbol, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_ticker_sync(void* ptr, RustBuffer symbol, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_trades_sync(void* ptr, RustBuffer symbol, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_volumes_sync(void* ptr, RustBuffer symbol, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_websocketclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_websocketclient(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_constructor_websocketclient_new(RustBuffer api_key, void* listener, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_endpoint(RustBuffer api_key, void* listener, RustBuffer endpoint, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_websocketclient_connect(void* ptr
);
uint64_t uniffi_marketdata_uniffi_fn_method_websocketclient_disconnect(void* ptr
);
int8_t uniffi_marketdata_uniffi_fn_method_websocketclient_is_connected(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_websocketclient_subscribe(void* ptr, RustBuffer channel, RustBuffer symbol
);
uint64_t uniffi_marketdata_uniffi_fn_method_websocketclient_unsubscribe(void* ptr, RustBuffer channel, RustBuffer symbol
);
void* uniffi_marketdata_uniffi_fn_clone_websocketlistener(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_websocketlistener(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_init_callback_vtable_websocketlistener(UniffiVTableCallbackInterfaceWebSocketListener* vtable
);
void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_connected(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_disconnected(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_message(void* ptr, RustBuffer message, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_error(void* ptr, RustBuffer error_message, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_rest_client_with_api_key(RustBuffer api_key, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_rest_client_with_bearer_token(RustBuffer bearer_token, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_rest_client_with_sdk_token(RustBuffer sdk_token, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_websocket_client(RustBuffer api_key, void* listener, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_websocket_client_with_endpoint(RustBuffer api_key, void* listener, RustBuffer endpoint, RustCallStatus *out_status
);
RustBuffer ffi_marketdata_uniffi_rustbuffer_alloc(uint64_t size, RustCallStatus *out_status
);
RustBuffer ffi_marketdata_uniffi_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rustbuffer_free(RustBuffer buf, RustCallStatus *out_status
);
RustBuffer ffi_marketdata_uniffi_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_u8(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_marketdata_uniffi_rust_future_complete_u8(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_i8(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_i8(uint64_t handle
);
int8_t ffi_marketdata_uniffi_rust_future_complete_i8(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_u16(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_marketdata_uniffi_rust_future_complete_u16(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_i16(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_i16(uint64_t handle
);
int16_t ffi_marketdata_uniffi_rust_future_complete_i16(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_u32(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_marketdata_uniffi_rust_future_complete_u32(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_i32(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_i32(uint64_t handle
);
int32_t ffi_marketdata_uniffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_u64(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_marketdata_uniffi_rust_future_complete_u64(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_i64(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_i64(uint64_t handle
);
int64_t ffi_marketdata_uniffi_rust_future_complete_i64(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_f32(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_f32(uint64_t handle
);
float ffi_marketdata_uniffi_rust_future_complete_f32(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_f64(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_f64(uint64_t handle
);
double ffi_marketdata_uniffi_rust_future_complete_f64(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_pointer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_pointer(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_pointer(uint64_t handle
);
void* ffi_marketdata_uniffi_rust_future_complete_pointer(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_marketdata_uniffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *out_status
);