bindings/java/src/main/java/tw/com/fugle/marketdata/generated/UniffiLib.java

    
    Pointer uniffi_marketdata_uniffi_fn_clone_futoptclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_futoptclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_futoptclient_intraday(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_futoptintradayclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_futoptintradayclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_products(Pointer ptr, RustBuffer.ByValue typ);
    Long uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_quote(Pointer ptr, RustBuffer.ByValue symbol, Byte afterHours);
    Long uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_ticker(Pointer ptr, RustBuffer.ByValue symbol, Byte afterHours);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futoptintradayclient_products_sync(Pointer ptr, RustBuffer.ByValue typ, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futoptintradayclient_quote_sync(Pointer ptr, RustBuffer.ByValue symbol, Byte afterHours, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futoptintradayclient_ticker_sync(Pointer ptr, RustBuffer.ByValue symbol, Byte afterHours, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_restclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_restclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_restclient_futopt(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_restclient_stock(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_stockclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_stockclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_stockclient_intraday(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_stockintradayclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_stockintradayclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockintradayclient_candles_sync(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue timeframe, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_candles(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue timeframe);
    Long uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_quote(Pointer ptr, RustBuffer.ByValue symbol);
    Long uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_ticker(Pointer ptr, RustBuffer.ByValue symbol);
    Long uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_trades(Pointer ptr, RustBuffer.ByValue symbol);
    Long uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_volumes(Pointer ptr, RustBuffer.ByValue symbol);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockintradayclient_quote_sync(Pointer ptr, RustBuffer.ByValue symbol, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockintradayclient_ticker_sync(Pointer ptr, RustBuffer.ByValue symbol, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockintradayclient_trades_sync(Pointer ptr, RustBuffer.ByValue symbol, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockintradayclient_volumes_sync(Pointer ptr, RustBuffer.ByValue symbol, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_websocketclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_websocketclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_constructor_websocketclient_new(RustBuffer.ByValue apiKey, Pointer listener, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_endpoint(RustBuffer.ByValue apiKey, Pointer listener, RustBuffer.ByValue endpoint, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_websocketclient_connect(Pointer ptr);
    Long uniffi_marketdata_uniffi_fn_method_websocketclient_disconnect(Pointer ptr);
    Byte uniffi_marketdata_uniffi_fn_method_websocketclient_is_connected(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_websocketclient_subscribe(Pointer ptr, RustBuffer.ByValue channel, RustBuffer.ByValue symbol);
    Long uniffi_marketdata_uniffi_fn_method_websocketclient_unsubscribe(Pointer ptr, RustBuffer.ByValue channel, RustBuffer.ByValue symbol);
    Pointer uniffi_marketdata_uniffi_fn_clone_websocketlistener(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_websocketlistener(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_init_callback_vtable_websocketlistener(UniffiVTableCallbackInterfaceWebSocketListener vtable);
    void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_connected(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_disconnected(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_message(Pointer ptr, RustBuffer.ByValue message, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_error(Pointer ptr, RustBuffer.ByValue errorMessage, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_rest_client_with_api_key(RustBuffer.ByValue apiKey, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_rest_client_with_bearer_token(RustBuffer.ByValue bearerToken, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_rest_client_with_sdk_token(RustBuffer.ByValue sdkToken, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_websocket_client(RustBuffer.ByValue apiKey, Pointer listener, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_func_new_websocket_client_with_endpoint(RustBuffer.ByValue apiKey, Pointer listener, RustBuffer.ByValue endpoint, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue ffi_marketdata_uniffi_rustbuffer_alloc(Long size, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue ffi_marketdata_uniffi_rustbuffer_from_bytes(ForeignBytes.ByValue bytes, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rustbuffer_free(RustBuffer.ByValue buf, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue ffi_marketdata_uniffi_rustbuffer_reserve(RustBuffer.ByValue buf, Long additional, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_u8(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_u8(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_u8(Long handle);
    Byte ffi_marketdata_uniffi_rust_future_complete_u8(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_i8(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_i8(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_i8(Long handle);
    Byte ffi_marketdata_uniffi_rust_future_complete_i8(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_u16(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_u16(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_u16(Long handle);
    Short ffi_marketdata_uniffi_rust_future_complete_u16(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_i16(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_i16(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_i16(Long handle);
    Short ffi_marketdata_uniffi_rust_future_complete_i16(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_u32(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_u32(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_u32(Long handle);
    Integer ffi_marketdata_uniffi_rust_future_complete_u32(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_i32(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_i32(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_i32(Long handle);
    Integer ffi_marketdata_uniffi_rust_future_complete_i32(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_u64(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_u64(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_u64(Long handle);
    Long ffi_marketdata_uniffi_rust_future_complete_u64(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_i64(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_i64(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_i64(Long handle);
    Long ffi_marketdata_uniffi_rust_future_complete_i64(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_f32(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_f32(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_f32(Long handle);
    Float ffi_marketdata_uniffi_rust_future_complete_f32(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_f64(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_f64(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_f64(Long handle);
    Double ffi_marketdata_uniffi_rust_future_complete_f64(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_pointer(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_pointer(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_pointer(Long handle);
    Pointer ffi_marketdata_uniffi_rust_future_complete_pointer(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_marketdata_uniffi_rust_future_poll_rust_buffer(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_marketdata_uniffi_rust_future_cancel_rust_buffer(Long handle);
    void ffi_marketdata_uniffi_rust_future_free_rust_buffer(Long handle);
    RustBuffer.ByValue ffi_marketdata_uniffi_rust_future_complete_rust_buffer(Long handle, UniffiRustCallStatus uniffi_out_errmk);
